Basic Feature: Quote Posting by the User

--- a/quotes/templates/quotes/index.html
+++ b/quotes/templates/quotes/index.html
@@ -8,7 +8,7 @@
 
 <a href="/quotes/login">Login</a>
 
-<form action="/quote/index" method="post">
+<form action="/quotes/" method="post">
     {% csrf_token %}
     {{ form }}
     <input type="submit" value="Submit" />
