Basic Feature Addition: Sigup page which will allow to create new username and its password

--- a/quotes/templates/quotes/index.html
+++ b/quotes/templates/quotes/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<a href="/quotes/login">Login</a>
+<a href="/quotes/login">Login</a>  or <a href="/quotes/signup">SignUP</a>
 
 <form action="/quotes/" method="post">
     {% csrf_token %}
