--- a/quotes/templates/quotes/signup.html
+++ b/quotes/templates/quotes/signup.html
@@ -5,10 +5,11 @@
     <title></title>
 </head>
 <body>
-<form action="/quotes/login" method="post">
+<form action="/quotes/signup" method="post">
     {% csrf_token %}
     {{ form }}
     <input type="submit" value="Submit" />
 </form>
+
 </body>
 </html>
