--- a/quotes/templates/quotes/index.html
+++ b/quotes/templates/quotes/index.html
@@ -6,7 +6,12 @@
 </head>
 <body>
 
+{% if username %}
+Welcome {{ username }} <br>
+<a href="/quotes/logout">Logout</a>
+{% else %}
 <a href="/quotes/login">Login</a>  or <a href="/quotes/signup">SignUP</a>
+{% endif %}
 
 <form action="/quotes/" method="post">
     {% csrf_token %}
