--- a/quotes/templates/quotes/index.html
+++ b/quotes/templates/quotes/index.html
@@ -32,6 +32,7 @@ Welcome {{ username }} <br>
 
 {% for quote in quote_list %}
     <li>{{ quote.quote_text }}</li>
+    Author: {{ quote.quote_author }}
     Submitted by {{ quote.user_who_uploaded }}     Submitted on: {{ quote.submission_date }}
     <br>
     <br>
