Basic Enhancement: Display the average Rating for the quote

--- a/quotes/templates/quotes/index.html
+++ b/quotes/templates/quotes/index.html
@@ -34,6 +34,7 @@ Welcome {{ username }} <br>
     <li>{{ quote.quote_text }}</li>
     Author: {{ quote.quote_author }}
     Submitted by {{ quote.user_who_uploaded }}     Submitted on: {{ quote.submission_date }}
+    Average Rating: {{ quote.average_rating }}
     <br>
     <br>
 {% endfor %}
