Basic Enhacement: Have a common layout for a quote using html div

--- a/quotes/templates/quotes/index.html
+++ b/quotes/templates/quotes/index.html
@@ -2,7 +2,38 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>quotes.com</title>
+    <head>
+<style>
+#header {
+    background-color:black;
+    color:white;
+    text-align:center;
+    padding:5px;
+}
+#nav {
+    line-height:30px;
+    background-color:#eeeeee;
+    min-height:100px;
+    overflow:hidden;
+    width:900px;
+    padding:5px;
+    border:1px solid black;
+}
+#section {
+    width:350px;
+    float:left;
+    padding:10px;
+}
+#footer {
+    background-color:black;
+    color:white;
+    clear:both;
+    text-align:center;
+   padding:5px;
+}
+</style>
+</head>
 </head>
 <body>
 
@@ -31,12 +62,13 @@ Welcome {{ username }} <br>
 {% endif %}
 
 {% for quote in quote_list %}
-    <li>{{ quote.quote_text }}</li>
-    Author: {{ quote.quote_author }}
-    Submitted by {{ quote.user_who_uploaded }}     Submitted on: {{ quote.submission_date }}
-    Average Rating: {{ quote.average_rating }}
-    <br>
-    <br>
+    <div id="nav">
+        {{ quote.quote_text }}<br>
+        Author: {{ quote.quote_author }} <br>
+        Submitted by {{ quote.user_who_uploaded }} <br>
+        Submitted on: {{ quote.submission_date }} <br>
+        Average Rating: {{ quote.average_rating }} <br>
+    </div>
 {% endfor %}
 
 </body>
