--- a/quotes/templates/quotes/index.html
+++ b/quotes/templates/quotes/index.html
@@ -15,6 +15,7 @@ Modified   : 01/08/2015
 Author     : Biju Ramalingam
 Description: Home page of the Quotes site
 -->
+
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     {% load staticfiles %}
@@ -88,8 +89,16 @@ Description: Home page of the Quotes site
                     <p>{{ quote.quote_text }}</p>
                     <p>--{{ quote.quote_author }}</p>
                 </div>
+                Submitted by {{ quote.user_who_uploaded }} <br>
+                Submitted on: {{ quote.submission_date }} <br>
+
                 <div>
-                    <p class="links"><span class="comments">Average Rating: {{ quote.average_rating }}</span><a href="#" title="b0x" class="comments">Comments</a></p>
+                    {% load Range %}
+                    Average Rating:
+                    {% for i in quote.average_rating|get_range %}
+                        {% load staticfiles %}
+                        <img src="{% static "quotes/fish.png" %}" alt="My image" height="20" width="20"/>
+                    {% endfor %}
                 </div>
             </div>
             {% endfor %}
