Main HTML Index page code cleanup

--- a/quotes/templates/quotes/index.html
+++ b/quotes/templates/quotes/index.html
@@ -22,7 +22,7 @@ Description: Home page of the Quotes site
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>Emerald by FCT</title>
+    <title>Quotes.com</title>
     <link href="{% static 'quotes/style.css' %}" rel="stylesheet" type="text/css" media="screen" />
 </head>
 <body>
@@ -30,7 +30,7 @@ Description: Home page of the Quotes site
     <div id="header-wrapper" class="container">
     <div id="header" class="container">
         <div id="logo">
-            <h1><a href="#">Quotes </a></h1>
+            <h1><a href="#"> Quotes </a></h1>
         </div>
         <div id="menu">
             <ul>
@@ -107,59 +107,6 @@ Description: Home page of the Quotes site
             <div style="clear: both;">&nbsp;</div>
         </div>
         <!-- end #content -->
-        
-        <div id="sidebar">
-            <ul>
-                <li>
-                    <div id="search" >
-                        <form method="get" action="#">
-                            <div>
-                                <input type="text" name="s" id="search-text" value="" />
-                                <input type="submit" id="search-submit" value="GO" />
-                            </div>
-                        </form>
-                    </div>
-                    <div style="clear: both;">&nbsp;</div>
-                </li>
-                <li>
-                    <h2>Aliquam tempus</h2>
-                    <p>Mauris vitae nisl nec metus placerat perdiet est. Phasellus dapibus semper consectetuer hendrerit.</p>
-                </li>
-                <li>
-                    <h2>Categories</h2>
-                    <ul>
-                        <li><a href="#">Aliquam libero</a></li>
-                        <li><a href="#">Consectetuer adipiscing elit</a></li>
-                        <li><a href="#">Metus aliquam pellentesque</a></li>
-                        <li><a href="#">Suspendisse iaculis mauris</a></li>
-                        <li><a href="#">Urnanet non molestie semper</a></li>
-                        <li><a href="#">Proin gravida orci porttitor</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <h2>Blogroll</h2>
-                    <ul>
-                        <li><a href="#">Aliquam libero</a></li>
-                        <li><a href="#">Consectetuer adipiscing elit</a></li>
-                        <li><a href="#">Metus aliquam pellentesque</a></li>
-                        <li><a href="#">Suspendisse iaculis mauris</a></li>
-                        <li><a href="#">Urnanet non molestie semper</a></li>
-                        <li><a href="#">Proin gravida orci porttitor</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <h2>Archives</h2>
-                    <ul>
-                        <li><a href="#">Aliquam libero</a></li>
-                        <li><a href="#">Consectetuer adipiscing elit</a></li>
-                        <li><a href="#">Metus aliquam pellentesque</a></li>
-                        <li><a href="#">Suspendisse iaculis mauris</a></li>
-                        <li><a href="#">Urnanet non molestie semper</a></li>
-                        <li><a href="#">Proin gravida orci porttitor</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
         <!-- end #sidebar -->
         <div style="clear: both;">&nbsp;</div>
     </div>
